<resources>
    <string name="app_name">Auth Spike</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_button">Register</string>
    <string name="register_login_button">Log In</string>
    <string name="sesion_persistance_message">Mantener la sesión activa</string>
    <string name="home_log_out_button">Log Out</string>
    <string name="home_delete_user_button">Delete</string>
    <string name="home_open_contacrts_button">Contacts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_button_google">Google Sign In</string>
    <string name="create_account_button">No account yet? Create one</string>
    <string name="register_repassword">Repeat password</string>
</resources>
