<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.everis.authspike.view.fragment.LoginFragment"
    android:background="@color/colorPrimaryDark">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/tiet_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="80dp"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/tiet_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/tiet_login_email"
        app:layout_constraintStart_toStartOf="@+id/tiet_login_email"
        app:layout_constraintTop_toBottomOf="@+id/tiet_login_email" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/keep_session_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/sesion_persistance_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiet_login_password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:text="@string/register_login_button"
        android:textColor="@color/primary_light"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keep_session_checkbox"
        />

    <Button
        android:id="@+id/google_login_button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@color/colorAccent"
        android:text="@string/register_button_google"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_not_registered"
        app:layout_constraintTop_toBottomOf="@+id/google_login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:textColor="@color/primary_light"
        android:text="@string/create_account_button"/>

</android.support.constraint.ConstraintLayout>
