<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.everis.authspike.view.fragment.LoginFragment"
    android:background="@color/colorPrimaryDark">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/tiet_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="80dp"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/tiet_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/tiet_email"
        app:layout_constraintStart_toStartOf="@+id/tiet_email"
        app:layout_constraintTop_toBottomOf="@+id/tiet_email" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/tiet_repassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/register_repassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/tiet_email"
        app:layout_constraintStart_toStartOf="@+id/tiet_email"
        app:layout_constraintTop_toBottomOf="@+id/tiet_password" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:text="@string/register_button"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/google_button"
        />

    <Button
        android:id="@+id/google_button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@color/colorAccent"
        android:text="@string/register_button_google"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>
